# particles

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
particle-system/: particles.hpp
src/: main.cpp
src/particle-system/: part.cpp  part.hpp  particles.hpp  physics.cpp  physics.hpp
